# mentor_whirlpool

./: LICENSE  requirements.txt  setup.cfg
.github/workflows/: database-coverage.yml  deployment.yml
debian/: changelog  rules
deployment/: inventory  playbook.yml
deployment/roles/deploy/tasks/: main.yml
mentor_whirlpool/: __main__.py  admin_handles.py  common.py  confirm.py  generic_handles.py  main.py  mentor_handles.py  students_handles.py  support_handles.py  support_request_handler.py  telegram.py  utils.py
mentor_whirlpool/admin_handle/: __init__.py  course_works_button.py  edit_subject.py  main_admin.py  mentor_button.py  mentors.py  requests.py  start.py  subjects_editing_button.py  support.py  support_editing_button.py
mentor_whirlpool/database/: __init__.py  accepted_tables.py  admins_tables.py  course_works_tables.py  ideas_tables.py  mentors_tables.py  necessities.py  students_tables.py  subjects_tables.py  supports_tables.py
mentor_whirlpool/mentor_handle/: __init__.py  course_works.py  idea.py  start.py  students.py  subjects.py
mentor_whirlpool/student_handle/: __init__.py  add_course_work.py  delete_course_work.py  ideas.py  read_course_works.py  start.py  wanna_be_mentor.py
mentor_whirlpool/test_database/: test_db.csv
mentor_whirlpool/tests/: __init__.py  coveragerc  database_unit_tests.py  profconfig  run_coverage.sh  run_profile.sh  run_tests.sh
tests/: database_unit_tests.py  run_coverage.sh  run_profile.sh  run_tests.sh
