[metadata]
name = mentor_whirlpool_zinstack625
version = 0.1.0
author = Anton Klimanov (zinstack625)
author_email = klimanov625@outlook.com
description = Telegram bot for course work distribution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zinstack625/mentor_whirlpool
project_urls =
    Bug Tracker = https://github.com/zinstack625/mentor_whirlpool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = mentor_whirlpool
python_requires = >=3.6
